Update HTML Page

--- a/JavaScript/Docuemnt/nauka.html
+++ b/JavaScript/Docuemnt/nauka.html
@@ -42,13 +42,48 @@
     <div>
 
     </div>
-    
     -->
 
+		<!-- Content In Elements Section -->
+
+		<!-- <button>Przycisk !</button>
+
+    <p class="innter-text">
+        To
+        <span>Jest</span>
+        innerText
+    </p>
+
+    <p class="text-content">
+        To
+        <span>Jest</span>
+        textContent
+    </p> -->
+
+		<!-- Usuwanie elementów z html za pomocą JavaScriptu -->
+
+		<!-- <div>
+			<p>Test</p>
+			<p>Test</p>
+		</div> -->
+
+		<!-- addEventListener, czyli coś bez czego nic nie zrobimy JavaScriptem w HTML -->
+
+		<!-- <button class="click">Click</button>
+		<button class="najechano">najedź</button>
+		<button class="double-click"> double click</button> -->
+
+		<!-- Eevent  -->
+
+            <button class="event">Jestem przyciskiem ! </button>
 
 
-        <!-- <script src="zadania.js"></script> -->
+		<!-- <script src="zadania.js"></script> -->
 		<!-- <script src="pobieranieElementow.js"></script> -->
-        <script src="createAddElements.js"></script>
+		<!-- <script src="createAddElements.js"></script> -->
+		<!-- <script src="contentInElements.js"></script> -->
+		<!-- <script src="deleteElementsFromHTML.js"></script> -->
+		<!-- <script src="addEventListener.js"></script> -->
+        <script src="event.js"></script>
 	</body>
 </html>
