--- a/JavaScript/Docuemnt/nauka.html
+++ b/JavaScript/Docuemnt/nauka.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<link rel="stylesheet" href="nauka.css">
 	</head>
 	<body>
 		<!-- Kod dla pobieranieelementow.js -->
@@ -75,15 +76,28 @@
 
 		<!-- Eevent  -->
 
-            <button class="event">Jestem przyciskiem ! </button>
+		<!-- <button class="event">Jestem przyciskiem ! </button> -->
 
+		<!-- Do Zadania nr. 4 -->
 
-		<!-- <script src="zadania.js"></script> -->
+		<div class="wrapper">
+			<div class="buttons">
+				<button class="btn btn1">🍔</button>
+				<button class="btn btn2">🍕</button>
+			</div>
+			<div class="square"></div>
+			<div class="text">
+				<p class="p1">Paragraf 1</p>
+				<p class="p2 show">Paragraf 2</p>
+			</div>
+		</div>
+
+		<script src="zadania.js"></script>
 		<!-- <script src="pobieranieElementow.js"></script> -->
 		<!-- <script src="createAddElements.js"></script> -->
 		<!-- <script src="contentInElements.js"></script> -->
 		<!-- <script src="deleteElementsFromHTML.js"></script> -->
 		<!-- <script src="addEventListener.js"></script> -->
-        <script src="event.js"></script>
+		<!-- <script src="event.js"></script> -->
 	</body>
 </html>
