--- a/JavaScript/general/nauka.html
+++ b/JavaScript/general/nauka.html
@@ -7,14 +7,43 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<a></a>
+		<!-- Atrybuty -->
+
+		<!-- <a></a>
 		<img src="obrazek.jpg" alt="123" />
-		<p>Paragraf</p>
+		<p>Paragraf</p> -->
+
+		<!-- Data - atrybuty -->
+
+		<!-- <img src="" alt=""> podstawowe atrybuty
+
+		<div data-number="23" data-more-info="To jest tekst">Nasze własne atrubyty</div> -->
+
+		<!-- Relacje rodzinne -->
+
+		<!-- <div class="grandparent">
+			<div class="parent">
+				<p class="child">1</p>
+				<p class="child middle-child">2</p>
+				<p class="child">3</p>
+			</div>
+		</div> -->
+
+		<!-- Zadanie 1 -->
+
+		<!-- <img> -->
+
+		<!-- Zadanie 2 -->
+
 
 		<!-- <script src="setTimeOutInterval.js"></script> -->
 		<!-- <script src="strictMode.js"></script> -->
 		<!-- <script src="alertConfirmPrompt.js"></script> -->
 		<!-- <script src="math.js "></script> -->
-        <script src="atributes.js"></script>
+		<!-- <script src="atributes.js"></script> -->
+		<!-- <script src="dataAtribute.js"></script> -->
+		<!-- <script src="familyRelations.js"></script> -->
+		<!-- <script src="zadania.js"></script> -->
+		<script src="console.js"></script>
 	</body>
 </html>
