--- a/JavaScript/JSON AJAX API/nauka.html
+++ b/JavaScript/JSON AJAX API/nauka.html
@@ -39,5 +39,7 @@
     <img src="" alt="">
 
     <script src="FetchThenCatch.js"></script>
+    <script src="promise.js"></script>
+    <script src="GETPOSTPUT.js"></script>
 </body>
 </html>
