--- a/JavaScript/JSON AJAX API/nauka.html
+++ b/JavaScript/JSON AJAX API/nauka.html
@@ -38,8 +38,9 @@
     <button>CLICK</button>
     <img src="" alt="">
 
-    <script src="FetchThenCatch.js"></script>
-    <script src="promise.js"></script>
-    <script src="GETPOSTPUT.js"></script>
+    <!-- <script src="FetchThenCatch.js"></script> -->
+    <!-- <script src="promise.js"></script> -->
+    <!-- <script src="GETPOSTPUT.js"></script> -->
+    <script src="ASYNCAWAIT.js"></script>
 </body>
 </html>
