--- a/JavaScript/JSON AJAX API/nauka.html
+++ b/JavaScript/JSON AJAX API/nauka.html
@@ -36,11 +36,12 @@
     </style>
 
     <button>CLICK</button>
-    <img src="" alt="">
+    <img class="one" src="" alt="">
 
     <!-- <script src="FetchThenCatch.js"></script> -->
     <!-- <script src="promise.js"></script> -->
     <!-- <script src="GETPOSTPUT.js"></script> -->
-    <script src="ASYNCAWAIT.js"></script>
+    <!-- <script src="ASYNCAWAIT.js"></script> -->
+    <script src="APIASYNC.js"></script>
 </body>
 </html>
