--- a/JavaScript/JSON AJAX API/nauka.html
+++ b/JavaScript/JSON AJAX API/nauka.html
@@ -1,47 +1,54 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <style>
-        body {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            background-color: #333;
-        }
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+	</head>
+	<body>
+		<style>
+			body {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				height: 100vh;
+				background-color: #333;
+			}
 
-        button {
-            padding: 20px 40px;
-            margin: 20px;
-            cursor: pointer;
-            background: none;
-            color: #fff;
-            font-size: 18px;
-            border: 3px solid #ddd;
-            border-radius: 8px;
-            transition: 0.3s; 
-            text-transform: uppercase;
-        }
+			button {
+				padding: 20px 40px;
+				margin: 20px;
+				cursor: pointer;
+				background: none;
+				color: #fff;
+				font-size: 18px;
+				border: 3px solid #ddd;
+				border-radius: 8px;
+				transition: 0.3s;
+				text-transform: uppercase;
+			}
 
-        button:hover {
-            background-color: #ddd;
-            color: #000;
-        }
-    </style>
+			button:hover {
+				background-color: #ddd;
+				color: #000;
+			}
+		</style>
 
-    <button>CLICK</button>
-    <img class="one" src="" alt="">
+		<div style="display: flex">
+			<img class="one" src="" alt="" />
+			<img class="two" src="" alt="" />
+			<img class="three" src="" alt="" />
+		</div>
 
-    <!-- <script src="FetchThenCatch.js"></script> -->
-    <!-- <script src="promise.js"></script> -->
-    <!-- <script src="GETPOSTPUT.js"></script> -->
-    <!-- <script src="ASYNCAWAIT.js"></script> -->
-    <script src="APIASYNC.js"></script>
-</body>
+		<!-- <script src="FetchThenCatch.js"></script> -->
+		<!-- <script src="promise.js"></script> -->
+		<!-- <script src="GETPOSTPUT.js"></script> -->
+		<!-- <script src="ASYNCAWAIT.js"></script> -->
+		<!-- <script src="APIASYNC.js"></script> -->
+
+		<script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+        
+		<script src="AXIOS.js"></script>
+	</body>
 </html>
