--- a/JavaScript/projects/wheaterApp/index.html
+++ b/JavaScript/projects/wheaterApp/index.html
@@ -31,7 +31,7 @@
 						<p class="warning"></p>
 					</div>
 					<img
-						src="./img/unknown.png"
+						src="./img/every.png"
 						alt="Obrazek przedstawiający pogodę"
 						class="photo"
 					>
