--- a/HTML/FlexBoxPage/index.html
+++ b/HTML/FlexBoxPage/index.html
@@ -21,6 +21,11 @@
 		<link rel="stylesheet" href="/css/main.css" />
 	</head>
 	<body>
+        <button class="burger-btn">
+            <div class="burger-btn__box">
+                <div class="burger-btn__bars"></div>
+            </div>
+        </button>
 		<script src="./js/script.js"></script>
 	</body>
 </html>
