--- a/HTML/FlexBoxPage/index.html
+++ b/HTML/FlexBoxPage/index.html
@@ -21,6 +21,7 @@
 		<link rel="stylesheet" href="/css/main.css" />
 	</head>
 	<body>
+        
         <button class="burger-btn">
             <div class="burger-btn__box">
                 <div class="burger-btn__bars"></div>
@@ -28,7 +29,12 @@
         </button>
 
         <nav class="nav">
-
+            <div class="nav__items">
+                <a href="#islands" class="nav__item">Wyspy</a>
+                <a href="#offers" class="nav__item">Oferty</a>
+                <a href="#reviews" class="nav__item">Opinie</a>
+                <a href="#contact" class="nav__item">Kontakt</a>
+            </div>
         </nav>
 
         <header class="header section">
