--- a/HTML/FlexBoxPage/index.html
+++ b/HTML/FlexBoxPage/index.html
@@ -9,7 +9,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Open+Sans:wght@400;700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Open+Sans:wght@300;700&display=swap"
 			rel="stylesheet"
 		/>
 
@@ -21,28 +21,62 @@
 		<link rel="stylesheet" href="/css/main.css" />
 	</head>
 	<body>
-        
-        <button class="burger-btn">
-            <div class="burger-btn__box">
-                <div class="burger-btn__bars"></div>
-            </div>
-        </button>
+		<button class="burger-btn">
+			<div class="burger-btn__box">
+				<div class="burger-btn__bars"></div>
+			</div>
+		</button>
 
-        <nav class="nav">
-            <div class="nav__items">
-                <a href="#islands" class="nav__item">Wyspy</a>
-                <a href="#offers" class="nav__item">Oferty</a>
-                <a href="#reviews" class="nav__item">Opinie</a>
-                <a href="#contact" class="nav__item">Kontakt</a>
-            </div>
-        </nav>
+		<nav class="nav">
+			<div class="nav__items">
+				<a href="#islands" class="nav__item">Wyspy</a>
+				<a href="#offers" class="nav__item">Oferty</a>
+				<a href="#reviews" class="nav__item">Opinie</a>
+				<a href="#contact" class="nav__item">Kontakt</a>
+			</div>
+		</nav>
 
-        <header class="header section">
-            <h1 class="header__title">Tropical Paradise</h1>
-            <p class="header__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-            <a href="#offers" class="header__btn btn-special-animation">Poznaj ofertę</a>
-            <div class="white-block white-block-left"></div>
-        </header>
+		<header class="header section">
+			<h1 class="header__title">Tropical Paradise</h1>
+			<p class="header__text">
+				Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+			</p>
+			<a href="#offers" class="header__btn btn-special-animation"
+				>Poznaj ofertę</a
+			>
+			<div class="white-block white-block-left"></div>
+		</header>
+
+		<main class="main">
+            <section class="dreams section-padding section white-section">
+                <div class="wrapper">
+                    <h2 class="section-heading">Spełniaj marzenia</h2>
+                    <div class="dreams__box">
+                        <div class="dreams__box-img">
+                            <img src="img/paradise-598201_640.jpg" alt="Domki nad oceanem" class="dreams__img">
+                        </div>
+                        <div class="dreams__box-text">
+                            <h3 class="dreams__title">Wymarzone wakacje</h3>
+                            <p class="dreams__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic id nihil
+                                sequi asperiores aspernatur illo fugit facere doloremque laudantium? Ipsum at sint optio
+                                recusandae. Doloremque mollitia consequatur quidem minus possimus!</p>
+                        </div>
+                    </div>
+                    <div class="dreams__box">
+                        <div class="dreams__box-img dreams__box-img--right">
+                            <img src="img/bora-bora-3023437_640.jpg" alt="Domki nad oceanem na tle góry"
+                                class="dreams__img">
+                        </div>
+                        <div class="dreams__box-text dreams__box-text--right">
+                            <h3 class="dreams__title">Niezapomiane przygody</h3>
+                            <p class="dreams__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic id nihil
+                                sequi asperiores aspernatur illo fugit facere doloremque laudantium? Ipsum at sint optio
+                                recusandae. Doloremque mollitia consequatur quidem minus possimus!</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+		</main>
 
 		<script src="./js/script.js"></script>
 	</body>
