--- a/NewJSReactNode/JS/index.html
+++ b/NewJSReactNode/JS/index.html
@@ -60,6 +60,7 @@
 		<!-- <script src="methods.js"></script> -->
 		<!-- <script src="JSON.js"></script> -->
 		<!-- <script src="statistics.js"></script> -->
-        <script src="gallery.js"></script>
+        <!-- <script src="gallery.js"></script> -->
+		<script src="thisClosuresPrototypes.js"></script>
 	</body>
 </html>
