--- a/HTML/GRIDWebsite/index.html
+++ b/HTML/GRIDWebsite/index.html
@@ -13,7 +13,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="/css/hamburger.css" />
-		<link rel="stylesheet" href="/css/main.css" />
+		<link rel="stylesheet" href="./css/main.css" />
 	</head>
 	<body>
 		<header class="header">
