--- a/HTML/websiteForSchoolLesson/aboutus.html
+++ b/HTML/websiteForSchoolLesson/aboutus.html
@@ -30,10 +30,10 @@
 	<body>
 		<nav class="nav">
 	<div class="hrLine"></div>
-	<a href="/index.html" class="nav__menu">Menu</a>
+	<a href="index.html" class="nav__menu">Menu</a>
 	<ul class="nav__links">
 		<li class="nav__link">
-			<a href="/models.html"><i class="fa-solid fa-car"></i><span>Modele</span></a>
+			<a href="models.html"><i class="fa-solid fa-car"></i><span>Modele</span></a>
 			<ul class="nav__link-items">
 				<li class="nav__link-item">
 					<i class="fa-solid fa-minus"></i><span>Sedan</span>
@@ -42,7 +42,7 @@
 					<i class="fa-solid fa-minus"></i><span>Suv</span>
 				</li>
 				<li class="nav__link-item">
-					<i class="fa-solid fa-minus"></i><span>Coupe</span>
+					<i class="fa-solid fa-minus"></i><span>Kabriolet</span>
 				</li>
 				<li class="nav__link-item">
 					<i class="fa-solid fa-minus"></i><span>Coupe</span>
@@ -50,10 +50,10 @@
 			</ul>
 		</li>
 		<li class="nav__link">
-			<a href="/buy.html"><i class="fa-regular fa-bookmark"></i><span>Zamów</span></a>
+			<a href="buy.html"><i class="fa-regular fa-bookmark"></i><span>Zamów</span></a>
 		</li>
 		<li class="nav__link">
-			<a href="/aboutus.html"><i class="fa-solid fa-address-card"></i><span>O nas</span></a>
+			<a href="aboutus.html"><i class="fa-solid fa-address-card"></i><span>O nas</span></a>
 		</li>
 	</ul>
 	<div class="nav__img">
@@ -66,21 +66,80 @@
 
 		<main>
 			<header><h1>O nas</h1></header>
+
+			<section class="aboutUs">
+				<p class="aboutUs__description enter section">
+					Jesteśmy firmą, która ma duże doświadczenie w temacie motoryzacji.
+					Opieramy się głównie na samochodach marki AUDI, ponieważ są najlepsze.
+					Zaufały nam tysiące klientów, więc zaufaj i TY, zapraszamy do
+					legalnych, tanich i szybkich zakupów. Swoje wymarzone auto znajdziesz
+					tylko u NAS !
+				</p>
+
+				<div class="aboutUs__company">
+					<h2 class="title">O firmie</h2>
+					<div class="aboutUs__company-info enter section">
+						<p>
+							1 Założyciel: 
+							<span class="blue">Bartosz Ślusarczyk</span>
+						</p>
+						<p>
+							2 Założyciel: 
+							<span class="blue">Szymon Rak</span>
+						</p>
+						<p>
+							Ważność: jesteśmy już  
+							<span class="grey">15 lat </span>
+							na rynku
+						</p>
+						<p>
+							Lokalizacja: 
+							<span class="grey">Kielce, 25-001</span>
+							, Świętokrzyskie
+						</p>
+						<p>
+							Działalność: 
+							<span class="grey">Motoryzacja</span>
+						</p>
+					</div>
+				</div>
+
+				<div class="aboutUs__bhp">
+					<h2 class="title">Bezpieczeństwo</h2>
+					<div class="aboutUs__bhp-info enter section">
+						<p>
+							Zaufało nam: 
+							<span class="blue">ponad tysiąc </span>
+							klientów
+						</p>
+						<p>
+							Ocena: 
+							<span class="gold"> 4,7 <i class="fa-solid fa-star"></i></span>
+						</p>
+						<p>
+							Certyfikat: 
+							<span class="grey">SSL, EV</span>
+						</p>
+						<p>
+							Płatności: Są chronione kluczem 
+							<span class="blue">SSH</span>
+						</p>
+					</div>
+				</div>
+			</section>
 		</main>
 
-        <footer>
+		<footer>
     <div class="hrLine"></div>
     <h2>Stronę wykonali: <span class="white">Szymon Rak</span> i <span class="white">Bartosz Ślusarczyk</span></h2>
 </footer>
-		
+
 		<script
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
 	crossorigin="anonymous"
 ></script>
 
-<script src="dist/js/main.min.js"></script>
 
 	</body>
 </html>
-
