--- a/HTML/websiteForSchoolLesson/buy.html
+++ b/HTML/websiteForSchoolLesson/buy.html
@@ -30,10 +30,10 @@
 	<body>
 		<nav class="nav">
 	<div class="hrLine"></div>
-	<a href="/index.html" class="nav__menu">Menu</a>
+	<a href="index.html" class="nav__menu">Menu</a>
 	<ul class="nav__links">
 		<li class="nav__link">
-			<a href="/models.html"><i class="fa-solid fa-car"></i><span>Modele</span></a>
+			<a href="models.html"><i class="fa-solid fa-car"></i><span>Modele</span></a>
 			<ul class="nav__link-items">
 				<li class="nav__link-item">
 					<i class="fa-solid fa-minus"></i><span>Sedan</span>
@@ -42,7 +42,7 @@
 					<i class="fa-solid fa-minus"></i><span>Suv</span>
 				</li>
 				<li class="nav__link-item">
-					<i class="fa-solid fa-minus"></i><span>Coupe</span>
+					<i class="fa-solid fa-minus"></i><span>Kabriolet</span>
 				</li>
 				<li class="nav__link-item">
 					<i class="fa-solid fa-minus"></i><span>Coupe</span>
@@ -50,10 +50,10 @@
 			</ul>
 		</li>
 		<li class="nav__link">
-			<a href="/buy.html"><i class="fa-regular fa-bookmark"></i><span>Zamów</span></a>
+			<a href="buy.html"><i class="fa-regular fa-bookmark"></i><span>Zamów</span></a>
 		</li>
 		<li class="nav__link">
-			<a href="/aboutus.html"><i class="fa-solid fa-address-card"></i><span>O nas</span></a>
+			<a href="aboutus.html"><i class="fa-solid fa-address-card"></i><span>O nas</span></a>
 		</li>
 	</ul>
 	<div class="nav__img">
@@ -66,6 +66,100 @@
 
 		<main>
 			<header><h1>Zamów</h1></header>
+
+			<section class="car__gallery">
+				<div class="car__gallery-item car__gallery-item-1">
+					<div class="shadow"></div>
+					<div class="car__gallery-item__text">
+						<p class="location">
+							<i class="fa-solid fa-location-dot"></i>
+							<span>German</span>
+						</p>
+						<p class="phone">
+							<i class="fa-solid fa-phone"></i>
+							<span>548 341 123</span>
+						</p>
+						<p class="rates">
+							<i class="fa-solid fa-star"></i>
+							<i class="fa-solid fa-star"></i>
+							<i class="fa-solid fa-star"></i>
+							<i class="fa-solid fa-star"></i>
+							<i class="fa-regular fa-star"></i>
+						</p>
+					</div>
+				</div>
+
+				<div class="car__gallery-item car__gallery-item-2">
+					<div class="shadow"></div>
+					<div class="car__gallery-item__text">
+						<p class="location">
+							<i class="fa-solid fa-location-dot"></i>
+							<span>Poland</span>
+						</p>
+						<p class="phone">
+							<i class="fa-solid fa-phone"></i>
+							<span>432 531 431</span>
+						</p>
+						<p class="rates">
+							<i class="fa-solid fa-star"></i>
+							<i class="fa-solid fa-star"></i>
+							<i class="fa-solid fa-star"></i>
+							<i class="fa-regular fa-star"></i>
+							<i class="fa-regular fa-star"></i>
+						</p>
+					</div>
+				</div>
+
+				<div class="car__gallery-item car__gallery-item-3">
+					<div class="shadow"></div>
+					<div class="car__gallery-item__text">
+						<p class="location">
+							<i class="fa-solid fa-location-dot"></i>
+							<span>Turkish</span>
+						</p>
+						<p class="phone">
+							<i class="fa-solid fa-phone"></i>
+							<span>222 314 255</span>
+						</p>
+						<p class="rates">
+							<i class="fa-solid fa-star"></i>
+							<i class="fa-solid fa-star"></i>
+							<i class="fa-solid fa-star"></i>
+							<i class="fa-solid fa-star"></i>
+							<i class="fa-solid fa-star"></i>
+						</p>
+					</div>
+				</div>
+
+				<div class="car__gallery-item car__gallery-item-4">
+					<div class="shadow"></div>
+					<div class="car__gallery-item__text">
+						<p class="location">
+							<i class="fa-solid fa-location-dot"></i>
+							<span>Finland</span>
+						</p>
+						<p class="phone">
+							<i class="fa-solid fa-phone"></i>
+							<span>647 673 153</span>
+						</p>
+						<p class="rates">
+							<i class="fa-solid fa-star"></i>
+							<i class="fa-solid fa-star"></i>
+							<i class="fa-regular fa-star"></i>
+							<i class="fa-regular fa-star"></i>
+							<i class="fa-regular fa-star"></i>
+						</p>
+					</div>
+				</div>
+			</section>
+
+			<section class="timer">
+				<div class="timer__text">
+					Ostatnio dodane: 
+					<span class="timer__time">3h 20min</span>
+					temu
+				</div>
+			</section>
 		</main>
 
         <footer>
@@ -79,7 +173,6 @@
 	crossorigin="anonymous"
 ></script>
 
-<script src="dist/js/main.min.js"></script>
 
 	</body>
 </html>
