--- a/HTML/websiteForSchoolLesson/index.html
+++ b/HTML/websiteForSchoolLesson/index.html
@@ -30,10 +30,10 @@
 	<body>
 		<nav class="nav">
 	<div class="hrLine"></div>
-	<a href="/index.html" class="nav__menu">Menu</a>
+	<a href="index.html" class="nav__menu">Menu</a>
 	<ul class="nav__links">
 		<li class="nav__link">
-			<a href="/models.html"><i class="fa-solid fa-car"></i><span>Modele</span></a>
+			<a href="models.html"><i class="fa-solid fa-car"></i><span>Modele</span></a>
 			<ul class="nav__link-items">
 				<li class="nav__link-item">
 					<i class="fa-solid fa-minus"></i><span>Sedan</span>
@@ -42,7 +42,7 @@
 					<i class="fa-solid fa-minus"></i><span>Suv</span>
 				</li>
 				<li class="nav__link-item">
-					<i class="fa-solid fa-minus"></i><span>Coupe</span>
+					<i class="fa-solid fa-minus"></i><span>Kabriolet</span>
 				</li>
 				<li class="nav__link-item">
 					<i class="fa-solid fa-minus"></i><span>Coupe</span>
@@ -50,10 +50,10 @@
 			</ul>
 		</li>
 		<li class="nav__link">
-			<a href="/buy.html"><i class="fa-regular fa-bookmark"></i><span>Zamów</span></a>
+			<a href="buy.html"><i class="fa-regular fa-bookmark"></i><span>Zamów</span></a>
 		</li>
 		<li class="nav__link">
-			<a href="/aboutus.html"><i class="fa-solid fa-address-card"></i><span>O nas</span></a>
+			<a href="aboutus.html"><i class="fa-solid fa-address-card"></i><span>O nas</span></a>
 		</li>
 	</ul>
 	<div class="nav__img">
@@ -156,7 +156,6 @@
 	crossorigin="anonymous"
 ></script>
 
-<script src="dist/js/main.min.js"></script>
 
 	</body>
 </html>
